# detllm

./: Cargo.toml  README.md  detllm-design.md
.github/workflows/: benchmarks.yml  ci.yml
crates/det-cli/: Cargo.toml
crates/det-cli/src/: main.rs
crates/det-cli/tests/: testdata_cli.rs
crates/det-coder/: Cargo.toml
crates/det-coder/src/: cdf.rs  file.rs  lib.rs  range.rs  stream.rs
crates/det-coder/tests/: core_roundtrip.rs
crates/det-gguf/: Cargo.toml
crates/det-gguf/src/: lib.rs
crates/det-model/: Cargo.toml
crates/det-model/src/: lib.rs
crates/det-num/: Cargo.toml
crates/det-num/src/: canary.rs  f16.rs  hash.rs  lib.rs  math.rs  reduce.rs  round.rs  vendored_libm.rs
crates/det-num/src/vendored_libm/: cos.rs  exp.rs  expf.rs  k_cos.rs  k_sin.rs  log.rs  rem_pio2.rs  rem_pio2_large.rs  sin.rs
crates/det-quant/: Cargo.toml
crates/det-quant/src/: lib.rs
crates/det-token/: Cargo.toml
crates/det-token/src/: lib.rs
docs/: validation.md
scripts/: reference_logits_llamacpp.cpp  reference_logits_transformers.py  run-target-bench-smoke.sh  run-target-codec-determinism-matrix.sh  run-target-determinism-matrix.sh  run-target-full-bench.sh  run-target-hf-logits-matrix.sh  run-target-logits-broad-matrix.sh  run-target-logits-matrix.sh  run-target-logprob-broad-matrix.sh  run-target-logprob-matrix.sh  run-target-ppl-reference-matrix.sh  run-target-roundtrip-matrix.sh
testdata/: tiny-f32.gguf  tiny-f32.logits.sha256  tiny-qmix.gguf  tiny-qmix.logits.sha256  tiny.tokens.txt
xtask/: Cargo.toml
xtask/src/: main.rs
