[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
det-coder = { path = "../crates/det-coder" }
det-gguf = { path = "../crates/det-gguf" }
det-model = { path = "../crates/det-model" }
det-num = { path = "../crates/det-num" }
det-token = { path = "../crates/det-token" }

[features]
default = []
parallel = ["det-model/parallel"]
simd = ["det-model/simd"]

[lints]
workspace = true
