[package]
name = "det-quant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
det-num = { path = "../det-num" }

[features]
default = []
simd = []

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
